--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "kimia-ui",
   "version": "0.1.0",
-  "private": true,
+  "license": "MIT",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -9,7 +9,19 @@
   },
   "dependencies": {
     "next": "10.0.5",
+    "nprogress": "^0.2.0",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-copy-to-clipboard": "^5.0.3",
+    "react-dom": "17.0.1",
+    "react-live": "^2.2.3"
+  },
+  "devDependencies": {
+    "@types/node": "^14.14.20",
+    "@types/react": "^17.0.0",
+    "autoprefixer": "^10.2.1",
+    "next-sitemap": "^1.4.5",
+    "postcss": "^8.2.4",
+    "tailwindcss": "^2.0.2",
+    "typescript": "^4.1.3"
   }
 }
