--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "start": "next start"
   },
   "dependencies": {
-    "@reach/portal": "^0.12.1",
-    "next": "10.0.5",
+    "@reach/portal": "^0.13.0",
+    "next": "^10.0.7",
     "nprogress": "^0.2.0",
     "react": "17.0.1",
     "react-copy-to-clipboard": "^5.0.3",
@@ -17,12 +17,12 @@
     "react-live": "^2.2.3"
   },
   "devDependencies": {
-    "@types/node": "^14.14.20",
-    "@types/react": "^17.0.0",
-    "autoprefixer": "^10.2.1",
-    "next-sitemap": "^1.4.5",
-    "postcss": "^8.2.4",
-    "tailwindcss": "^2.0.2",
-    "typescript": "^4.1.3"
+    "@types/node": "^14.14.28",
+    "@types/react": "^17.0.2",
+    "autoprefixer": "^10.2.4",
+    "next-sitemap": "^1.5.6",
+    "postcss": "^8.2.6",
+    "tailwindcss": "^2.0.3",
+    "typescript": "^4.1.5"
   }
 }
