--- a/package.json
+++ b/package.json
@@ -19,9 +19,17 @@
   "devDependencies": {
     "@types/node": "^14.14.28",
     "@types/react": "^17.0.2",
+    "@typescript-eslint/eslint-plugin": "^4.15.1",
+    "@typescript-eslint/parser": "^4.15.1",
     "autoprefixer": "^10.2.4",
+    "eslint": "^7.20.0",
+    "eslint-config-prettier": "^7.2.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "next-sitemap": "^1.5.6",
     "postcss": "^8.2.6",
+    "prettier": "^2.2.1",
     "tailwindcss": "^2.0.3",
     "typescript": "^4.1.5"
   }
