--- a/package.json
+++ b/package.json
@@ -8,12 +8,17 @@
     "start": "next start"
   },
   "dependencies": {
+    "@mdx-js/loader": "^1.6.22",
+    "@mdx-js/react": "^1.6.22",
+    "@next/mdx": "^10.0.7",
     "@reach/portal": "^0.13.0",
+    "mdx-utils": "^0.2.0",
     "next": "^10.0.7",
     "nprogress": "^0.2.0",
     "react": "17.0.1",
     "react-copy-to-clipboard": "^5.0.3",
     "react-dom": "17.0.1",
+    "react-dom-confetti": "^0.2.0",
     "react-live": "^2.2.3"
   },
   "devDependencies": {
