--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "postbuild": "next-sitemap"
+    "postbuild": "next-sitemap",
+    "lint": "eslint '*/**/*.{js,ts,tsx}' --quiet --fix"
   },
   "dependencies": {
     "@mdx-js/loader": "^1.6.22",
@@ -18,7 +19,6 @@
     "nprogress": "^0.2.0",
     "react": "17.0.1",
     "react-content-loader": "^6.0.1",
-    "react-copy-to-clipboard": "^5.0.3",
     "react-dom": "17.0.1",
     "react-dom-confetti": "^0.2.0",
     "react-live": "^2.2.3"
