--- a/package.json
+++ b/package.json
@@ -8,7 +8,20 @@
     "start": "next start",
     "postbuild": "next-sitemap",
     "lint": "eslint '*/**/*.{js,ts,tsx}' --quiet --fix",
-    "format": "prettier '*/**/*.{js,ts,tsx}' --write"
+    "format": "prettier '*/**/*.{js,ts,tsx}' --write",
+    "prepare": "husky install"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*/**/*.{js,ts,tsx": [
+      "eslint --fix",
+      "prettier --write",
+      "git add"
+    ]
   },
   "dependencies": {
     "@mdx-js/loader": "^1.6.22",
@@ -35,6 +48,8 @@
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "husky": "^5.1.3",
+    "lint-staged": "^10.5.4",
     "next-sitemap": "^1.5.6",
     "postcss": "^8.2.6",
     "prettier": "^2.2.1",
