--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
       "git add"
     ]
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/enochndika/kimia-UI.git"
+  },
   "dependencies": {
     "@mdx-js/loader": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
