--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@mdx-js/react": "^1.6.22",
     "@next/mdx": "^10.0.7",
     "@reach/portal": "^0.13.0",
+    "formik": "^2.2.6",
     "mdx-utils": "^0.2.0",
     "next": "^10.0.7",
     "nprogress": "^0.2.0",
@@ -39,7 +40,9 @@
     "react-content-loader": "^6.0.1",
     "react-dom": "17.0.1",
     "react-dom-confetti": "^0.2.0",
-    "react-live": "^2.2.3"
+    "react-hook-form": "^6.15.5",
+    "react-live": "^2.2.3",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@types/node": "^14.14.28",
