--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "postbuild": "next-sitemap",
+    "lint": "next lint",
     "prepare": "husky install"
   },
   "lint-staged": {
@@ -26,33 +27,32 @@
     "@reach/portal": "^0.13.0",
     "formik": "^2.2.6",
     "mdx-utils": "^0.2.0",
-    "next": "^10.2.0",
-    "react": "17.0.1",
+    "next": "^11.0.1",
+    "react": "^17.0.2",
     "react-content-loader": "^6.0.1",
-    "react-dom": "17.0.1",
+    "react-div-100vh": "^0.6.0",
+    "react-dom": "^17.0.2",
     "react-dom-confetti": "^0.2.0",
     "react-hook-form": "^7.6.4",
     "react-live": "^2.2.3",
     "yup": "^0.32.9"
   },
   "devDependencies": {
-    "@types/node": "^14.14.28",
-    "@types/react": "^17.0.2",
-    "@typescript-eslint/eslint-plugin": "^4.15.1",
-    "@typescript-eslint/parser": "^4.15.1",
-    "autoprefixer": "^10.2.4",
-    "eslint": "^7.20.0",
-    "eslint-config-prettier": "^7.2.0",
-    "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-react": "^7.22.0",
-    "eslint-plugin-react-hooks": "^4.2.0",
+    "@types/node": "^15.12.4",
+    "@types/react": "^17.0.11",
+    "@typescript-eslint/parser": "^4.28.0",
+    "autoprefixer": "^10.2.6",
+    "eslint": "^7.29.0",
+    "eslint-config-next": "^11.0.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-unused-imports": "^1.1.1",
-    "husky": "^5.1.3",
-    "lint-staged": "^10.5.4",
-    "next-sitemap": "^1.5.6",
-    "postcss": "^8.2.6",
-    "prettier": "^2.2.1",
-    "tailwindcss": "^2.0.3",
-    "typescript": "^4.1.5"
+    "husky": "^6.0.0",
+    "lint-staged": "^11.0.0",
+    "next-sitemap": "^1.6.124",
+    "postcss": "^8.3.5",
+    "prettier": "^2.3.1",
+    "tailwindcss": "^2.2.4",
+    "typescript": "^4.3.4"
   }
 }
