add new section template

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "baseUrl": ".",
     "paths": {
       "@/packages/*": ["packages/*"],
+      "@/public/*": ["public/*"],
       "@/website/*": ["website/*"]
     },
     "target": "es5",
