--- a/.eslintrc
+++ b/.eslintrc
@@ -15,6 +15,6 @@
     "react/no-unescaped-entities": "off",
     "@typescript-eslint/explicit-module-boundary-types": "off",
     "react/prop-types": [2, { "ignore": ["children"] }],
-    "react/display-name": "off"
+    "react/display-name": 0
   }
 }
