major updates - rename index.tsx by package name in package directory - unmark dashboards item as arrival in sidebar - update read.me file - update prettier and eslint config

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,4 +1,5 @@
 {
+  "root": true,
   "extends": ["plugin:prettier/recommended", "next/core-web-vitals"],
   "plugins": ["unused-imports"],
   "rules": {
