Update Tailwindcss to v3 - update next to v12 - update react & react-dom - update tailwindcss to v3 - use JIT compiler by default - update all other dependencies - make sure every components works with tailwindcss v3 - update tailwindcss config file

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,12 +2,22 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@/packages/*": ["src/packages/*"],
-      "@/public/*": ["public/*"],
-      "@/website/*": ["src/website/*"]
+      "@/packages/*": [
+        "src/packages/*"
+      ],
+      "@/public/*": [
+        "public/*"
+      ],
+      "@/website/*": [
+        "src/website/*"
+      ]
     },
     "target": "es5",
-    "lib": ["dom", "dom.iterable", "esnext"],
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": false,
@@ -18,8 +28,15 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "preserve"
+    "jsx": "preserve",
+    "incremental": true
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
-  "exclude": ["node_modules"]
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
